--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand titulo" href="#">Frontend</a>
+                <a class="navbar-brand titulo" href="#"><img class="img-nav-bar" src="./assets/perfil-img.jpg" alt="foto profesional"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,13 +21,16 @@
                             <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">¿Qué es?</a>
+                            <a class="nav-link" href="#">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pilares</a>
+                            <a class="nav-link" href="#">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Buenas Practicas</a>
+                            <a class="nav-link" href="#">Proyectos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -36,7 +39,9 @@
     </header>
     <section class="section-inicio">
         <div class="hero">
-            <img class="hero-img" src="./assets/intro-front.jpg" alt="foto ilustrativa del frontend">
+            <h1>Soy Gabriel Salvarani</h1>
+            <h2>Estudiante de ing. infomática y un apasionado por la tecnología</h2>
+            <a href="#">Conoceme Más</a>
         </div>
     </section>
     <section>
