añadi el html de la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         </div>
     </section>
     <section>
-
+        <div class="sobre-mi">
+            <h2>Más Sobre Mi</h2>
+            <p class="sobre-mi-text">Soy Gabriel, estudiante de ing. en informática en la UNLaM, tengo 19 años, apasionado por la tecnología, el desarrollo web y la inteligencia artificial. Disfruto aprender cosas nuevas, resolver problemas y construir proyectos, desde un aspecto simple, útil y con sentido.</p>
+        </div>
     </section>
     <section>
 
