--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
         </div>
     </section>
     <section>
-
+        <div class="skils">
+            <h2>Habilidades</h2>
+                <ul class="skill-grid">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>C</li>
+                    <li>Resolución de problemas</li>
+                </ul>
+        </div>
     </section>
     <section>
 
