--- a/index.html
+++ b/index.html
@@ -50,23 +50,24 @@
             <p class="sobre-mi-text">Soy Gabriel, estudiante de ing. en informática en la UNLaM, tengo 19 años, apasionado por la tecnología, el desarrollo web y la inteligencia artificial. Disfruto aprender cosas nuevas, resolver problemas y construir proyectos, desde un aspecto simple, útil y con sentido.</p>
         </div>
     </section>
-    <section>
-        <div class="skils">
+    <section class="section-skills">
+        <div class="skills">
             <h2>Habilidades</h2>
                 <ul class="skill-grid">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
+                    <li><i class="fa-brands fa-html5"></i>HTML</li>
+                    <li><i class="fa-brands fa-css"></i>CSS</li>
+                    <li><i class="fa-brands fa-git-alt"></i>Git</li>
                     <li>C</li>
+                    <li>inglés técnico</li>
                     <li>Resolución de problemas</li>
                 </ul>
         </div>
     </section>
     <section>
-
+        
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
     </script>
+    <script src="https://kit.fontawesome.com/e0c9c39e6f.js" crossorigin="anonymous"></script>
 </body>
 </html>
