añadi los estilos de la seccion proyectos

--- a/index.html
+++ b/index.html
@@ -57,14 +57,30 @@
                     <li><i class="fa-brands fa-html5"></i>HTML</li>
                     <li><i class="fa-brands fa-css"></i>CSS</li>
                     <li><i class="fa-brands fa-git-alt"></i>Git</li>
-                    <li>C</li>
+                    <li>Lenguaje C</li>
                     <li>inglés técnico</li>
                     <li>Resolución de problemas</li>
                 </ul>
         </div>
     </section>
     <section>
-        
+        <div class="proyecto">
+            <h2>Proyectos</h2>
+            <ul class="proyect-grid">
+                <li class="proyecto-card">
+                    <img src="./assets/galeria_slider.jpg" alt="ilustracion del proyecto'slider' ">
+                    <p>Una galeria slider</p>
+                </li>
+                <li class="proyecto-card">
+                    <img src="./assets/catalogo.png" alt="ilustracion del proyecto catalogo ">
+                    <p>Catálogo para un emprendimiento</p>
+                </li>
+                <li class="proyecto-card">
+                    <img class="portafolio-card" src="./assets/portafolio-img.jpg" alt="ilustracion del portafolio personal">
+                    <p>Portafolio personal</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
     </script>
