añadi la estructura de la seccion de contactos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ul class="proyect-grid">
                 <li class="proyecto-card">
                     <img src="./assets/galeria_slider.jpg" alt="ilustracion del proyecto'slider' ">
-                    <p>Una galeria slider</p>
+                    <p>Una galeria<br>slider</p>
                 </li>
                 <li class="proyecto-card">
                     <img src="./assets/catalogo.png" alt="ilustracion del proyecto catalogo ">
@@ -77,7 +77,28 @@
                 </li>
                 <li class="proyecto-card">
                     <img class="portafolio-card" src="./assets/portafolio-img.jpg" alt="ilustracion del portafolio personal">
-                    <p>Portafolio personal</p>
+                    <p>Portafolio<br>personal</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section>
+        <div class="contacto">
+            <h2>Contacto</h2>
+            <ul class="redes-sociales">
+                <li>
+                    <a href="https://wa.me/5491130529992" target="_blank" aria-label="WhatsApp">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabrielsalvarani@gmail.com" target="_blank">
+                        <i class="fa-solid fa-envelope-open"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Gabriel-Salvarani" target="_blank">
+                        <i class="fa-brands fa-github"></i>
                 </li>
             </ul>
         </div>
