enlace las secciones con el nav bar

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
                 <div class="collapse navbar-collapse submenu" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="#hero">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre mí</a>
+                            <a class="nav-link" href="#sobre-mi">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Habilidades</a>
+                            <a class="nav-link" href="#skills">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="#proyecto">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contacto</a>
+                            <a href="#contacto" class="nav-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -38,20 +38,20 @@
         </nav>
     </header>
     <section class="section-inicio">
-        <div class="hero">
+        <div class="hero" id="hero">
             <h1>Soy Gabriel Salvarani</h1>
             <h2>Estudiante de ing. infomática y un apasionado por la tecnología</h2>
-            <a href="#">Conoceme Más</a>
+            <a href="#sobre-mi">Conoceme Más</a>
         </div>
     </section>
     <section>
-        <div class="sobre-mi">
+        <div class="sobre-mi" id="sobre-mi">
             <h2>Más Sobre Mi</h2>
             <p class="sobre-mi-text">Soy Gabriel, estudiante de ing. en informática en la UNLaM, tengo 19 años, apasionado por la tecnología, el desarrollo web y la inteligencia artificial. Disfruto aprender cosas nuevas, resolver problemas y construir proyectos, desde un aspecto simple, útil y con sentido.</p>
         </div>
     </section>
     <section class="section-skills">
-        <div class="skills">
+        <div class="skills" id="skills">
             <h2>Habilidades</h2>
                 <ul class="skill-grid">
                     <li><i class="fa-brands fa-html5"></i>HTML</li>
@@ -64,7 +64,7 @@
         </div>
     </section>
     <section>
-        <div class="proyecto">
+        <div class="proyecto" id="proyecto">
             <h2>Proyectos</h2>
             <ul class="proyect-grid">
                 <li class="proyecto-card">
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section>
-        <div class="contacto">
+        <div class="contacto" id="contacto">
             <h2>Contacto</h2>
             <ul class="redes-sociales">
                 <li>
